Added AppConstants + refactor